# Usami

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  justfile
.claude/skills/commit/: SKILL.md
backend/: CLAUDE.md  Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/agents/: boss.py  nodes.py  prompts.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_documents_table.py  003_add_users_table.py  004_add_push_subscriptions.py  005_add_events_table.py  006_add_tasks_and_resume_requests.py
backend/api/: admin_routes.py  auth_routes.py  notification_routes.py  routes.py  sse.py  websocket.py
backend/core/: auth.py  config.py  event_store.py  hitl.py  memory.py  model_router.py  persona_factory.py  plan_validator.py  protocols.py  push.py  rate_limit.py  state.py  task_queue.py  tool_registry.py
backend/scheduler/: cron.py  events.py
backend/tests/: conftest.py  test_boss.py  test_config.py  test_event_store.py  test_hitl.py  test_model_router.py  test_plan_validator.py  test_routes.py  test_sse.py  test_state.py  test_tool_registry.py  test_websocket.py
backend/worker/: __init__.py  main.py
config/: CLAUDE.md  litellm_config.yaml  personas.yaml  routing.yaml  tools.yaml
config/searxng/: settings.yml
docs/: architecture-v2.md  architecture.md  archive-review-v2-spec.md  collaboration-workflow.md  design-decisions.md  frontend-plan.md  review.md
frontend/: .env.example  CLAUDE.md  Dockerfile  Dockerfile.dev  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml
frontend/e2e/: smoke.spec.ts
frontend/messages/: en.json  zh.json
frontend/public/: sw.js
frontend/src/: middleware.ts
frontend/src/__tests__/: notification-store.test.ts  thread-store.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(admin)/: layout.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(main)/: layout.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/admin/: health-panel.tsx  job-table.tsx  persona-card.tsx  tool-table.tsx  user-table.tsx
frontend/src/components/chat/: chat-input.tsx  connection-status-bar.tsx  message-bubble.tsx  message-list.tsx  phase-banner.tsx  thread-drawer.tsx  thread-list.tsx  ws-status-badge.tsx
frontend/src/components/hitl/: hitl-dialog.tsx
frontend/src/hooks/: use-admin-users.ts  use-create-task.ts  use-derived-messages.ts  use-health.ts  use-resolve-hitl.ts  use-task-detail.ts  use-thread-management.ts
frontend/src/i18n/: request.ts
frontend/src/lib/: api-client.ts  api-server.ts  constants.ts  push.ts  sse.ts  ws.ts
frontend/src/stores/: auth-store.ts  notification-store.ts  sse-store.ts  thread-store.ts  ws-store.ts
frontend/src/types/: api.ts  sse.ts  ws.ts
(+33 files in other folders)
