[project]
name = "usami"
version = "0.1.0"
description = "Personal AI Operating System — multi-agent orchestration for technical research and knowledge synthesis"
requires-python = ">=3.12"
dependencies = [
    # Core
    "fastapi==0.115.*",
    "uvicorn[standard]==0.34.*",
    "websockets==14.*",
    "pydantic==2.*",
    "pyyaml==6.*",
    "python-dotenv==1.*",
    # Agent Runtime
    "langgraph>=0.2.60",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    # MCP
    "langchain-mcp-adapters==0.1.*",
    # LLM Gateway
    "litellm==1.*",
    # Database
    "asyncpg==0.30.*",
    "sqlalchemy[asyncio]==2.*",
    "psycopg[binary]==3.*",
    "langgraph-checkpoint-postgres>=2.0.0",
    "alembic==1.*",
    "pgvector==0.3.*",
    # Redis
    "redis[hiredis]==5.*",
    # Scheduler
    "apscheduler==3.*",
    # Utilities
    "httpx==0.28.*",
    "structlog==24.*",
    # Auth
    "PyJWT==2.*",
    "bcrypt==4.*",
    "python-multipart==0.0.*",
]

[dependency-groups]
dev = [
    "pytest==8.*",
    "pytest-asyncio==0.24.*",
    "pytest-mock==3.*",
    "pytest-cov==5.*",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
    "RUF001", # ambiguous unicode chars in strings (Chinese user-facing strings are intentional)
    "RUF002", # ambiguous unicode chars in docstrings (Chinese punctuation is intentional)
    "RUF003", # ambiguous unicode chars in comments (Chinese comments are intentional)
    "RUF012", # mutable class variable (Pydantic models)
    "UP007",  # use X | Y for union types (keep Optional for readability)
]

[tool.ruff.lint.isort]
known-first-party = ["core", "agents", "api", "scheduler"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "RUF059", # unused unpacked variables (common in test fixtures)
    "PT011",  # broad pytest.raises (acceptable in tests)
    "B017",   # pytest.raises(Exception) too broad (acceptable in tests)
    "SIM116", # use dict instead of if/elif (readability preference in tests)
    "SIM117", # nested with statements (readability preference in tests)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
